--- a/styles/styles.less
+++ b/styles/styles.less
@@ -3,8 +3,23 @@
 @font-color: #69747c;
 @decor-color: #A6AAAD;
 @decor-dark: #6492B6;
+@baseFontSize: 1rem;
+@main-font: "PT Sans Narrow";
+@header-font: "Josefin Sans";
 
 @import "reset.css";
+
+@font-face {
+  font-family: "PT Sans Narrow";
+  src: local("PT Sans Narrow"),
+  url("fonts/PT_Sans-Narrow-Web-Regular.ttf");
+}
+
+@font-face {
+  font-family: "Josefin Sans";
+  src: local("Josefin Sans"),
+  url("fonts/JosefinSans-Light.ttf");
+}
 
 body {
   display: flex;
@@ -12,7 +27,8 @@ body {
   align-items: center;
   margin: 0 auto;
   //width: 1920px;
-  width: 1368px;
+  width: 1680px;
+  font-family: @main-font;
 }
 
 .logo {
@@ -21,7 +37,9 @@ body {
   display: block;
   text-align: center;
   text-transform: uppercase;
-  font-size: 2rem;
+  font-size: 2 * @baseFontSize;
+  font-family: @header-font;
+  font-weight: bold;
   text-decoration: none;
   color: @theme-color;
   //.logo__image {
@@ -56,6 +74,7 @@ body {
   width: 100%;
   background: @theme-color;
   box-shadow: 0 4px 0 @theme-shadow-color;
+  font-family: @header-font;
 }
 
 .navigation__link {
@@ -78,7 +97,7 @@ body {
     content: '';
     display: block;
     position: absolute;
-    top: 40px;
+    top: 38px;
     left: calc(50% - 10px);
     width: 0;
     height: 0;
@@ -90,7 +109,7 @@ body {
     content: '';
     display: block;
     position: absolute;
-    top: 44px;
+    top: 42px;
     left: calc(50% - 10px);
     width: 0;
     height: 0;
@@ -107,11 +126,11 @@ body {
 }
 
 .center-block__content {
-  margin-right: 20px;
+  margin-right: 30px;
 }
 
 .article {
-  margin-bottom: 10px;
+  margin-bottom: 30px;
   width: 640px;
   color: @font-color;
 }
@@ -138,7 +157,8 @@ body {
 
 .article__header {
   padding: 7px 0;
-  font-size: 1.2rem;
+  font-family: @header-font;
+  font-size: 1.2 * @baseFontSize;
   font-weight: bold;
 }
 
@@ -175,7 +195,7 @@ body {
 .article__time-icon {
   width: 1rem;
   height: 1.2rem;
-  vertical-align: -15%;
+  vertical-align: -25%;
   fill: @decor-color;
   use {
     transform: scale(.5) translateX(-431px) translateY(3px);
@@ -185,7 +205,7 @@ body {
 .article__author-icon {
   width: 1rem;
   height: 1.2rem;
-  vertical-align: -15%;
+  vertical-align: -25%;
   fill: @decor-color;
   use {
     transform: scale(.5) translateX(-530px) translateY(3px);
@@ -194,10 +214,6 @@ body {
 
 .article__social {
   float: right;
-}
-
-.social {
-
 }
 
 .social__element {
@@ -218,10 +234,6 @@ body {
     box-shadow: 0 0 1px @font-color;
     opacity: .7;
   }
-}
-
-.social__link--facebook {
-
 }
 
 .article__social-icon {
@@ -285,7 +297,9 @@ body {
   padding-left: 2rem;
   margin-bottom: 15px;
   border-bottom: 5px solid @decor-dark;
-  font-size: 1.5rem;
+  font-family: @header-font;
+  font-weight: bold;
+  font-size: 1.5 * @baseFontSize;
   text-transform: uppercase;
   color: @decor-dark;
   &::before {
@@ -305,12 +319,14 @@ body {
 .note__header--question {
   &::before {
     content: '?';
+    font-family: @main-font;
   }
 }
 
 .note__header--exclamation {
   &::before {
     content: '!';
+    font-family: @main-font;
   }
 }
 
@@ -321,7 +337,7 @@ body {
 .tags__element {
   display: inline-block;
   position: relative;
-  padding: 1px 10px;
+  padding: 3px 10px;
   margin: 0 15px 5px 0;
   background: @decor-dark;
   color: #fff;
@@ -332,14 +348,14 @@ body {
     right: -12px;
     top: 0;
     border-left: 12px solid @decor-dark;
-    border-top: 9px solid transparent;
-    border-bottom: 9px solid transparent;
+    border-top: 11px solid transparent;
+    border-bottom: 11px solid transparent;
   }
   &::after {
     content: '';
     display: block;
     position: absolute;
-    top: 5px;
+    top: 7px;
     right: -2px;
     width: 8px;
     height: 8px;
@@ -349,5 +365,8 @@ body {
   &:hover {
     cursor: pointer;
     background: darken(@decor-dark, 5%);
+    &::before {
+      border-left: 12px solid darken(@decor-dark, 5%);
+    }
   }
 }
