--- a/styles/styles.less
+++ b/styles/styles.less
@@ -1,372 +1,38 @@
-@theme-color: #6B9AD0;
-@theme-shadow-color: #c6defa;
-@font-color: #69747c;
-@decor-color: #A6AAAD;
-@decor-dark: #6492B6;
-@baseFontSize: 1rem;
-@main-font: "PT Sans Narrow";
-@header-font: "Josefin Sans";
-
-@import "reset.css";
-
 @font-face {
   font-family: "PT Sans Narrow";
   src: local("PT Sans Narrow"),
   url("fonts/PT_Sans-Narrow-Web-Regular.ttf");
 }
-
 @font-face {
   font-family: "Josefin Sans";
   src: local("Josefin Sans"),
   url("fonts/JosefinSans-Light.ttf");
 }
 
-body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 0 auto;
-  //width: 1920px;
-  width: 1680px;
-  font-family: @main-font;
-}
-
-.logo {
-  height: 4.4rem;
-  line-height: 4.4rem;
-  display: block;
-  text-align: center;
-  text-transform: uppercase;
-  font-size: 2 * @baseFontSize;
-  font-family: @header-font;
-  font-weight: bold;
-  text-decoration: none;
-  color: @theme-color;
-  //.logo__image {
-  //  vertical-align: middle;
-  //  display: inline-block;
-  //  width: 2.7rem;
-  //  height: 2.7rem;
-  //  border-radius: 50%;
-  //  background: #638EB0 url("sprites/sprite.svg") 20% 5% no-repeat;
-  //  background-size: 2395%;
-  //}
-}
-
-.logo__svg {
-  width: 2.7rem;
-  height: 2.7rem;
-  vertical-align: middle;
-  margin: 0 .2rem;
-  border-radius: 50%;
-  background: @theme-color;
-  fill: #fff;
-  use {
-    transform: scale(1.55) translateX(-146px) translateY(-2px);
-  }
-}
-
-.navigation {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin-bottom: 50px;
-  width: 100%;
-  background: @theme-color;
-  box-shadow: 0 4px 0 @theme-shadow-color;
-  font-family: @header-font;
-}
-
-.navigation__link {
-  display: inline-block;
-  padding: 12px 28px;
-  text-decoration: none;
-  text-transform: uppercase;
-  color: #fff;
-  &:hover {
-    background: #5d88b9;
-    &::after {
-      border-top: 10px solid #5d88b9;
-    }
-  }
-}
-
-.navigation__link--active {
-  position: relative;
-  &::after {
-    content: '';
-    display: block;
-    position: absolute;
-    top: 38px;
-    left: calc(50% - 10px);
-    width: 0;
-    height: 0;
-    border-top: 10px solid @theme-color;
-    border-left: 10px solid transparent;
-    border-right: 10px solid transparent;
-  }
-  &::before {
-    content: '';
-    display: block;
-    position: absolute;
-    top: 42px;
-    left: calc(50% - 10px);
-    width: 0;
-    height: 0;
-    border-top: 10px solid @theme-shadow-color;
-    border-left: 10px solid transparent;
-    border-right: 10px solid transparent;
-  }
-}
-
-.center-block {
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 100px;
-}
-
-.center-block__content {
-  margin-right: 30px;
-}
-
-.article {
-  margin-bottom: 30px;
-  width: 640px;
-  color: @font-color;
-}
-
-.article__image-wrapper {
-  height: 230px;
-  width: 640px;
-  overflow: hidden;
-  transition: all .2s ease-in-out;
-  &:hover {
-    box-shadow: 0 0 2px #000;
-  }
-}
-
-.article__image {
-  min-height: 230px;
-  min-width: 640px;
-  transition: filter .5s ease-in-out;
-  &:hover {
-    filter: contrast(1.1);
-    cursor: pointer;
-  }
-}
-
-.article__header {
-  padding: 7px 0;
-  font-family: @header-font;
-  font-size: 1.2 * @baseFontSize;
-  font-weight: bold;
-}
-
-.article__info-wrapper {
-  padding: 9px 0;
-  margin-bottom: 10px;
-  border-top: 1px solid @decor-color;
-  border-bottom: 1px solid @decor-color;
-}
-
-.article__time {
-  margin-right: 5px;
-  //position: relative;
-  //padding-left: 15px;
-  //&::before {
-  //  content: '';
-  //  position: absolute;
-  //  left: -7px;
-  //  top: -7px;
-  //  display: inline-block;
-  //  width: 30px;
-  //  height: 30px;
-  //  background: url(sprites/sprite.svg) no-repeat 60% 10%;
-  //  transform: scale(.5);// translateX(-5%);
-  //}
-}
-
-.article__author {
-  &::before {
-    content: 'by ';
-  }
-}
-
-.article__time-icon {
-  width: 1rem;
-  height: 1.2rem;
-  vertical-align: -25%;
-  fill: @decor-color;
-  use {
-    transform: scale(.5) translateX(-431px) translateY(3px);
-  }
-}
-
-.article__author-icon {
-  width: 1rem;
-  height: 1.2rem;
-  vertical-align: -25%;
-  fill: @decor-color;
-  use {
-    transform: scale(.5) translateX(-530px) translateY(3px);
-  }
-}
-
-.article__social {
-  float: right;
-}
-
-.social__element {
-  display: inline-block;
-}
-
-.social__link {
-  display: inline-block;
-  padding: 0 10px 0 0;
-  //width: 3rem;
-  height: 1.5rem;
-  text-decoration: none;
-  border-radius: 3px;
-  background: @decor-color;
-  color: #fff;
-  opacity: .5;
-  &:hover {
-    box-shadow: 0 0 1px @font-color;
-    opacity: .7;
-  }
-}
-
-.article__social-icon {
-  width: 1.3rem;
-  height: 1.4rem;
-  vertical-align: -15%;
-  fill: #fff;
-}
-
-.article__social-icon--facebook {
-  use {
-    transform: scale(.7) translateX(-480px) translateY(3px);
-  }
-}
-
-.article__social-icon--gplus {
-  use {
-    transform: scale(.7) translateY(3px);
-  }
-}
-
-.article__social-icon--twitter {
-  use {
-    transform: scale(.7) translateX(-239px);
-  }
-}
-
-.article__social-icon--vk {
-  use {
-    transform: scale(.6) translateX(-284px) translateY(2px);
-  }
-}
-
-.article__social-icon--yaru {
-  use {
-    transform: scale(.6) translateX(-330px) translateY(2px);
-  }
-}
-
-.social__count {
-  position: relative;
-  top: -2px;
-}
-
-.article__text {
-  text-align: justify;
-}
-
-.center-block__aside {
-  width: 280px;
-}
-
-.note {
-  margin-bottom: 25px;
-  text-align: justify;
-  color: @font-color;
-}
-
-.note__header {
-  position: relative;
-  padding-left: 2rem;
-  margin-bottom: 15px;
-  border-bottom: 5px solid @decor-dark;
-  font-family: @header-font;
-  font-weight: bold;
-  font-size: 1.5 * @baseFontSize;
-  text-transform: uppercase;
-  color: @decor-dark;
-  &::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    display: block;
-    width: 1.5rem;
-    height: 1.5rem;
-    text-align: center;
-    background: @decor-dark;
-    color: #fff;
-  }
-}
-
-.note__header--question {
-  &::before {
-    content: '?';
-    font-family: @main-font;
-  }
-}
-
-.note__header--exclamation {
-  &::before {
-    content: '!';
-    font-family: @main-font;
-  }
-}
-
-.tags {
-
-}
-
-.tags__element {
-  display: inline-block;
-  position: relative;
-  padding: 3px 10px;
-  margin: 0 15px 5px 0;
-  background: @decor-dark;
-  color: #fff;
-  &::before {
-    content: '';
-    display: block;
-    position: absolute;
-    right: -12px;
-    top: 0;
-    border-left: 12px solid @decor-dark;
-    border-top: 11px solid transparent;
-    border-bottom: 11px solid transparent;
-  }
-  &::after {
-    content: '';
-    display: block;
-    position: absolute;
-    top: 7px;
-    right: -2px;
-    width: 8px;
-    height: 8px;
-    border-radius: 50%;
-    background: #fff;
-  }
-  &:hover {
-    cursor: pointer;
-    background: darken(@decor-dark, 5%);
-    &::before {
-      border-left: 12px solid darken(@decor-dark, 5%);
-    }
-  }
-}
+@import "variables.less";
+@import "blocks/body/body.less";
+@import "blocks/logo/logo.less";
+@import "blocks/logo/__svg/logo__svg.less";
+@import "blocks/navigation/navigation.less";
+@import "blocks/navigation/__link/navigation__link.less";
+@import "blocks/center-block/center-block.less";
+@import "blocks/center-block/__content/center-block__content.less";
+@import "blocks/center-block/__aside/center-block__aside.less";
+@import "blocks/article/article.less";
+@import "blocks/article/__image-wrapper/article__image-wrapper.less";
+@import "blocks/article/__image/article__image.less";
+@import "blocks/article/__header/article__header.less";
+@import "blocks/article/__info-wrapper/article__info-wrapper.less";
+@import "blocks/article/__time/article__time.less";
+@import "blocks/article/__author/article__author.less";
+@import "blocks/article/__time-icon/article__time-icon.less";
+@import "blocks/article/__author-icon/article__author-icon.less";
+@import "blocks/article/__social/article__social.less";
+@import "blocks/article/__text/article__text.less";
+@import "blocks/social/__element/social__element.less";
+@import "blocks/social/__link/social__link.less";
+@import "blocks/social/__icon/social__icon.less";
+@import "blocks/social/__count/social__count.less";
+@import "blocks/note/note.less";
+@import "blocks/note/__header/note__header.less";
+@import "blocks/tags/__element/tags__element.less";
