--- a/styles/styles.less
+++ b/styles/styles.less
@@ -12,27 +12,9 @@
 @import "variables.less";
 @import "blocks/body/body.less";
 @import "blocks/logo/logo.less";
-@import "blocks/logo/__svg/logo__svg.less";
 @import "blocks/navigation/navigation.less";
-@import "blocks/navigation/__link/navigation__link.less";
 @import "blocks/center-block/center-block.less";
-@import "blocks/center-block/__content/center-block__content.less";
-@import "blocks/center-block/__aside/center-block__aside.less";
 @import "blocks/article/article.less";
-@import "blocks/article/__image-wrapper/article__image-wrapper.less";
-@import "blocks/article/__image/article__image.less";
-@import "blocks/article/__header/article__header.less";
-@import "blocks/article/__info-wrapper/article__info-wrapper.less";
-@import "blocks/article/__time/article__time.less";
-@import "blocks/article/__author/article__author.less";
-@import "blocks/article/__time-icon/article__time-icon.less";
-@import "blocks/article/__author-icon/article__author-icon.less";
-@import "blocks/article/__social/article__social.less";
-@import "blocks/article/__text/article__text.less";
-@import "blocks/social/__element/social__element.less";
-@import "blocks/social/__link/social__link.less";
-@import "blocks/social/__icon/social__icon.less";
-@import "blocks/social/__count/social__count.less";
+@import "blocks/social/social.less";
 @import "blocks/note/note.less";
-@import "blocks/note/__header/note__header.less";
-@import "blocks/tags/__element/tags__element.less";
+@import "blocks/tags/tags.less";
