--- a/styles/blocks/article/article.less
+++ b/styles/blocks/article/article.less
@@ -4,4 +4,78 @@
   margin-bottom: 30px;
   width: 640px;
   color: @font-color;
+
+  &__author {
+    &::before {
+      content: 'by ';
+    }
+  }
+
+  &__author-icon {
+    width: 1rem;
+    height: 1.2rem;
+    vertical-align: -25%;
+    fill: @decor-color;
+    use {
+      transform: scale(.5) translateX(-530px) translateY(3px);
+    }
+  }
+
+  &__header {
+    padding: 7px 0;
+    font-family: @header-font;
+    font-size: 1.2 * @baseFontSize;
+    font-weight: bold;
+  }
+
+  &__image {
+    min-height: 230px;
+    min-width: 640px;
+    transition: filter .5s ease-in-out;
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
+  &__image-wrapper {
+    height: 230px;
+    width: 640px;
+    overflow: hidden;
+    transition: all .2s ease-in-out;
+    &:hover {
+      box-shadow: 0 0 2px #000;
+    }
+    &:active {
+      transform: scale(1.02);
+    }
+  }
+
+  &__info-wrapper {
+    padding: 9px 0;
+    margin-bottom: 10px;
+    border-top: 1px solid @decor-color;
+    border-bottom: 1px solid @decor-color;
+  }
+
+  &__social {
+    float: right;
+  }
+
+  &__text {
+    text-align: justify;
+  }
+
+  &__time {
+    margin-right: 5px;
+  }
+
+  &__time-icon {
+    width: 1rem;
+    height: 1.2rem;
+    vertical-align: -25%;
+    fill: @decor-color;
+    use {
+      transform: scale(.5) translateX(-431px) translateY(3px);
+    }
+  }
 }
