--- a/styles/blocks/center-block/center-block.less
+++ b/styles/blocks/center-block/center-block.less
@@ -4,4 +4,12 @@
   display: flex;
   flex-direction: row;
   margin-bottom: 100px;
+
+  &__content {
+    margin-right: 30px;
+  }
+
+  &__aside {
+    width: 280px;
+  }
 }
