--- a/styles/blocks/logo/logo.less
+++ b/styles/blocks/logo/logo.less
@@ -11,4 +11,17 @@
   font-weight: bold;
   text-decoration: none;
   color: @theme-color;
+
+  &__svg {
+    width: 2.7rem;
+    height: 2.7rem;
+    vertical-align: middle;
+    margin: 0 .2rem;
+    border-radius: 50%;
+    background: @theme-color;
+    fill: #fff;
+    use {
+      transform: scale(1.55) translateX(-146px) translateY(-2px);
+    }
+  }
 }
