--- a/styles/blocks/note/note.less
+++ b/styles/blocks/note/note.less
@@ -4,4 +4,42 @@
   margin-bottom: 25px;
   text-align: justify;
   color: @font-color;
+
+  &__header {
+    position: relative;
+    padding-left: 2rem;
+    margin-bottom: 15px;
+    border-bottom: 5px solid @decor-dark;
+    font-family: @header-font;
+    font-weight: bold;
+    font-size: 1.5 * @baseFontSize;
+    text-transform: uppercase;
+    color: @decor-dark;
+    &::before {
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      display: block;
+      width: 1.5rem;
+      height: 1.5rem;
+      text-align: center;
+      background: @decor-dark;
+      color: #fff;
+    }
+
+    &--question {
+      &::before {
+        content: '?';
+        font-family: @main-font;
+      }
+    }
+
+    &--exclamation {
+      &::before {
+        content: '!';
+        font-family: @main-font;
+      }
+    }
+  }
 }
