--- a/styles/blocks/article/article.less
+++ b/styles/blocks/article/article.less
@@ -29,8 +29,8 @@
   }
 
   &__image {
-    min-height: 230px;
-    min-width: 640px;
+    width: 100%;
+    object-fit: cover;
     transition: filter .5s ease-in-out;
     &:hover {
       cursor: pointer;
