--- a/styles/styles.less
+++ b/styles/styles.less
@@ -12,6 +12,7 @@
 @import "variables.less";
 @import "blocks/body/body.less";
 @import "blocks/logo/logo.less";
+@import "blocks/header/header.less";
 @import "blocks/navigation/navigation.less";
 @import "blocks/center-block/center-block.less";
 @import "blocks/article/article.less";
