--- a/styles/blocks/body/body.less
+++ b/styles/blocks/body/body.less
@@ -5,6 +5,14 @@ body {
   flex-direction: column;
   align-items: center;
   margin: 0 auto;
-  width: 1680px;
+  //width: 1920px;
+  //width: 1680px;
   font-family: @main-font;
+}
+
+@media screen and (max-width: 1000px) {
+  body {
+    //width: 768px;
+    //background: #f00;
+  }
 }
