--- a/styles/blocks/center-block/center-block.less
+++ b/styles/blocks/center-block/center-block.less
@@ -13,3 +13,11 @@
     width: 280px;
   }
 }
+
+@media screen and (max-width: 1000px) {
+  .center-block {
+    &__aside {
+      display: none;
+    }
+  }
+}
