--- a/styles/blocks/navigation/navigation.less
+++ b/styles/blocks/navigation/navigation.less
@@ -4,11 +4,10 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin-bottom: 50px;
+  font-family: @header-font;
   width: 100%;
   background: @theme-color;
   box-shadow: 0 4px 0 @theme-shadow-color;
-  font-family: @header-font;
 
   &__link {
     display: inline-block;
@@ -50,5 +49,11 @@
         border-right: 10px solid transparent;
       }
     }
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .navigation {
+    justify-content: space-between;
   }
 }
