--- a/styles/blocks/tags/tags.less
+++ b/styles/blocks/tags/tags.less
@@ -47,7 +47,7 @@
   .tags {
     &--tablet {
       display: block;
-      margin: 0 40px;
+      margin: 10px 40px 30px;
       text-align: center;
     }
   }
