--- a/styles/blocks/navigation/navigation.less
+++ b/styles/blocks/navigation/navigation.less
@@ -54,6 +54,6 @@
 
 @media screen and (max-width: 1000px) {
   .navigation {
-    justify-content: space-between;
+    //justify-content: space-around;
   }
 }
