--- a/styles/styles.less
+++ b/styles/styles.less
@@ -13,6 +13,7 @@
 @import "blocks/body/body.less";
 @import "blocks/logo/logo.less";
 @import "blocks/header/header.less";
+@import "blocks/info/info.less";
 @import "blocks/navigation/navigation.less";
 @import "blocks/center-block/center-block.less";
 @import "blocks/article/article.less";
