--- a/styles/blocks/body/body.less
+++ b/styles/blocks/body/body.less
@@ -8,11 +8,7 @@ body {
   //width: 1920px;
   //width: 1680px;
   font-family: @main-font;
-}
+  @media @tablet {
 
-@media screen and (max-width: 1000px) {
-  body {
-    //width: 768px;
-    //background: #f00;
   }
 }
