--- a/styles/blocks/center-block/center-block.less
+++ b/styles/blocks/center-block/center-block.less
@@ -6,15 +6,15 @@
   margin-bottom: 100px;
 
   &__content {
-    margin-right: 30px;
+    margin-right: 28px;
   }
 
   &__aside {
-    width: 280px;
+    width: 255px;
   }
 }
 
-@media screen and (max-width: 1000px) {
+@media @tablet {
   .center-block {
     &__aside {
       display: none;
