--- a/styles/blocks/header/header.less
+++ b/styles/blocks/header/header.less
@@ -9,13 +9,11 @@
   z-index: 1;
   //margin-bottom: 50px;
   width: 100%;
-  margin-bottom: 50px;
+  margin-bottom: 52px;
   //height: 40px;
   //transition: all .5s ease-in-out;
-}
 
-@media screen and (max-width: 1000px) {
-  .header {
+  @media @tablet {
     margin-bottom: 0;
   }
 }
