--- a/styles/variables.less
+++ b/styles/variables.less
@@ -6,3 +6,9 @@
 @baseFontSize: 1rem;
 @main-font: "PT Sans Narrow";
 @header-font: "Josefin Sans";
+
+// Mode: Tablet
+@tablet: ~"screen and (max-width: 1000px)";
+
+// Mode: Mobile
+@mobile: ~"screen and (max-width: 320)";
