--- a/styles/blocks/logo/logo.less
+++ b/styles/blocks/logo/logo.less
@@ -1,27 +1,25 @@
 @import "../../variables.less";
 
 .logo {
-  height: 4.4rem;
-  line-height: 4.4rem;
+  height: 87px;
+  line-height: 87px;
+  width: 370px;
   display: block;
   text-align: center;
   text-transform: uppercase;
-  font-size: 2 * @baseFontSize;
+  font-size: 2.35 * @baseFontSize;
   font-family: @header-font;
   font-weight: bold;
   text-decoration: none;
   color: @theme-color;
 
   &__svg {
-    width: 2.7rem;
-    height: 2.7rem;
+    width: 3.7rem;
+    height: 3.7rem;
     vertical-align: middle;
     margin: 0 .2rem;
     border-radius: 50%;
     background: @theme-color;
     fill: #fff;
-    use {
-      transform: scale(1.55) translateX(-146px) translateY(-2px);
-    }
   }
 }
