--- a/styles/blocks/note/note.less
+++ b/styles/blocks/note/note.less
@@ -1,109 +1,63 @@
 @import "../../variables.less";
 
 .note {
-  margin-bottom: 25px;
+  margin-bottom: 31px;
   text-align: justify;
   color: @font-color;
+
+  @media @tablet {
+    transition: height .5s ease-in-out;
+    background: #fff;
+    margin-top: 30px;
+    &:hover {
+      margin: 4px 40px 20px;
+      width: 100%;
+      height: auto;
+
+      .note {
+        &__header--nav {
+          display: inline-block;
+          background: lighten(@theme-shadow-color, 5%);
+          //height: 54px;
+          //width: auto;
+        }
+
+        &__text--nav {
+          height: auto;
+          padding: 20px 34px;
+        }
+      }
+    }
+  }
 
   &--nav {
     display: none;
     margin-bottom: 0;
-  }
 
-  &__symbol {
-    display: none;
-  }
-
-  &__header {
-    position: relative;
-    padding-left: 2rem;
-    margin-bottom: 15px;
-    border-bottom: 5px solid @decor-dark;
-    font-family: @header-font;
-    font-weight: bold;
-    font-size: 1.5 * @baseFontSize;
-    text-transform: uppercase;
-    color: @decor-dark;
-    &::before {
-      content: '';
-      position: absolute;
-      left: 0;
-      //bottom: 0;
-      display: block;
-      width: 1.5rem;
-      height: 1.5rem;
-      text-align: center;
-      background: @decor-dark;
-      color: #fff;
-    }
-
-    &--question {
-      &::before {
-        content: '?';
-        font-family: @main-font;
-      }
-    }
-
-    &--exclamation {
-      &::before {
-        content: '!';
-        font-family: @main-font;
-      }
-    }
-
-    &--nav {
-      display: none;
-    }
-  }
-
-  &__text {
-    &--nav {
-      display: none;
-    }
-  }
-}
-
-@media screen and (max-width: 1000px) {
-  .note {
-    transition: height .5s ease-in-out;
-    background: #fff;
-    margin-top: 30px;
-    //z-index: 2;
-
-    &--nav {
+    @media @tablet {
       display: inline-block;
       width: 0;
       height: 0;
       overflow: hidden;
     }
+  }
 
-    &:hover {
-      margin: 4px 40px 20px;
-      width: 100%;
-      height: auto;
-      .note__header--nav {
-        display: inline-block;
-        background: lighten(@theme-shadow-color, 5%);
-      }
-      .note__text--nav {
-        display: block;
-        background: #fff;
-        padding: 20px;
-      }
-    }
+  &__symbol {
+    display: none;
 
-    &__symbol {
+    @media @tablet {
       display: block;
-      width: 40px;
-      height: 40px;
+      width: 54px;
+      height: 54px;
       background: darken(@theme-shadow-color, 10%);
       color: @theme-color;
-      line-height: 40px;
+      line-height: 54px;
       font-family: @header-font;
       font-weight: bold;
-      font-size: 1.5 * @baseFontSize;
+      font-size: 2 * @baseFontSize;
       text-align: center;
       box-shadow: 0 4px 0 @theme-shadow-color;
+
       &:hover {
         cursor: pointer;
       }
@@ -120,39 +74,86 @@
         right: 0;
       }
     }
+  }
 
-    &__header {
+  &__header {
+    position: relative;
+    padding: 4px 0 1px 43px;
+    margin-bottom: 15px;
+    border-bottom: 5px solid @decor-dark;
+    font-family: @header-font;
+    font-weight: bold;
+    font-size: 1.25 * @baseFontSize;
+    text-transform: uppercase;
+    color: @decor-dark;
+    //transition: height .5s;
+
+    @media @tablet {
+      display: none;
       margin: 0;
       border: none;
-      height: 40px;
-      line-height: 40px;
-      padding: 0 20px;
+      height: 54px;
+      line-height: 54px;
       position: absolute;
-      &::before {
-        display: none;
-      }
-      &::after {
-        display: none;
-      }
-      &--nav {
-      }
+      padding: 0 20px;
+      //width: 0;
+      //overflow: hidden;
+    }
 
-      &--question {
-        top: 83px;
-        left: -39px;
-        transform: rotate(-90deg);
-      }
+    &::before {
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: -3px;
+      line-height: 27px;
+      display: block;
+      width: 30px;
+      height: 27px;
+      text-align: center;
+      background: @decor-dark;
+      color: #fff;
 
-      &--exclamation {
-        top: 165px;
-        right: -121px;
-        transform: rotate(90deg);
+      @media @tablet {
+        display: none;
       }
     }
 
-    &__text {
-      &--nav {
+    &--question {
+      &::before {
+        content: '?';
+        font-family: @main-font;
+      }
 
+      @media @tablet {
+        top: 83px;
+        left: -25px;
+        transform: rotate(-90deg);
+      }
+    }
+
+    &--exclamation {
+      &::before {
+        content: '!';
+        font-family: @main-font;
+      }
+
+      @media @tablet {
+        top: 151px;
+        right: -93px;
+        transform: rotate(90deg);
+      }
+    }
+  }
+
+  &__text {
+    line-height: 1.125rem;
+    &--nav {
+      display: none;
+
+      @media @tablet {
+        display: block;
+        background: #fff;
+        height: 0;
       }
     }
   }
