--- a/styles/blocks/social/social.less
+++ b/styles/blocks/social/social.less
@@ -3,7 +3,7 @@
 .social {
   &__count {
     position: relative;
-    top: -2px;
+    top: -4px;
   }
 
   &__element {
@@ -12,39 +12,9 @@
 
   &__icon {
     width: 1.3rem;
-    height: 1.4rem;
+    height: 100%; // 1.4rem;
     vertical-align: -15%;
     fill: #fff;
-  }
-
-  &__icon--facebook {
-    use {
-      transform: scale(.7) translateX(-480px) translateY(3px);
-    }
-  }
-
-  &__icon--gplus {
-    use {
-      transform: scale(.7) translateY(3px);
-    }
-  }
-
-  &__icon--twitter {
-    use {
-      transform: scale(.7) translateX(-239px);
-    }
-  }
-
-  &__icon--vk {
-    use {
-      transform: scale(.6) translateX(-284px) translateY(2px);
-    }
-  }
-
-  &__icon--yaru {
-    use {
-      transform: scale(.6) translateX(-330px) translateY(2px);
-    }
   }
 
   &__link {
@@ -60,6 +30,26 @@
     &:hover {
       box-shadow: 0 0 1px @font-color;
       opacity: .7;
+    }
+
+    &--facebook:hover {
+      background: #3b5998;
+    }
+
+    &--gplus:hover {
+      background: #dd4b39;
+    }
+
+    &--twitter:hover {
+      background: #00aced;
+    }
+
+    &--vk:hover {
+      background: #45668e;
+    }
+
+    &--yaru:hover {
+      background: #f00;
     }
   }
 }
