--- a/styles/blocks/center-block/center-block.less
+++ b/styles/blocks/center-block/center-block.less
@@ -7,6 +7,12 @@
 
   &__content {
     margin-right: 28px;
+    //text-align: center;
+
+    @media @tablet {
+      margin-right: 0;
+      width: 100%;
+    }
   }
 
   &__aside {
