--- a/styles/variables.less
+++ b/styles/variables.less
@@ -11,4 +11,7 @@
 @tablet: ~"screen and (max-width: 1000px)";
 
 // Mode: Mobile
-@mobile: ~"screen and (max-width: 320)";
+@mobile: ~"screen and (max-width: 650px)";
+
+// Mode: Mobile
+//@mobile: ~"screen and (max-width: 320)";
