--- a/styles/blocks/article/article.less
+++ b/styles/blocks/article/article.less
@@ -5,6 +5,13 @@
   width: 640px;
   color: @font-color;
 
+  @media @tablet {
+    box-sizing: border-box;
+    width: 100%;
+    position: relative;
+    padding: 0 8.5%;
+  }
+
   &__author {
     &::before {
       content: 'by ';
@@ -26,8 +33,8 @@
   }
 
   &__image {
-    min-height: 230px;
-    min-width: 640px;
+    min-height: 100%;
+    width: 100%;
     transition: filter .5s ease-in-out;
     align-self: center;
     &:hover {
@@ -38,7 +45,7 @@
   &__image-wrapper {
     display: flex;
     height: 230px;
-    width: 640px;
+    width: 100%;
     overflow: hidden;
     transition: all .2s ease-in-out;
     &:hover {
@@ -59,6 +66,12 @@
   &__social {
     float: right;
     margin-top: -3px;
+
+    @media @tablet {
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
   }
 
   &__text {
