--- a/styles/blocks/info/info.less
+++ b/styles/blocks/info/info.less
@@ -4,9 +4,13 @@
   display: flex;
   flex-direction: column;
   &__notes-wrapper {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+    overflow: hidden;
+    margin: 4px 0 0;
+    transition: height .5s ease-in-out;
+    height: 0;
+    //display: flex;
+    //flex-direction: row;
+    //justify-content: center;
     //transition: all .5s;
   }
 }
