--- a/styles/blocks/note/note.less
+++ b/styles/blocks/note/note.less
@@ -5,40 +5,22 @@
   text-align: justify;
   color: @font-color;
 
-  @media @tablet {
-    transition: height .5s ease-in-out;
-    background: #fff;
-    margin-top: 30px;
-    &:hover {
-      margin: 4px 40px 20px;
-      width: 100%;
-      height: auto;
-
-      .note {
-        &__header--nav {
-          display: inline-block;
-          background: lighten(@theme-shadow-color, 5%);
-          //height: 54px;
-          //width: auto;
-        }
-
-        &__text--nav {
-          height: auto;
-          padding: 20px 34px;
-        }
-      }
-    }
-  }
-
   &--nav {
     display: none;
     margin-bottom: 0;
 
     @media @tablet {
       display: inline-block;
-      width: 0;
+      margin: 0 54px;
+      width: ~"calc(100% - 108px)";
       height: 0;
       overflow: hidden;
+      transition: height .5s ease-in-out;
+      background: #fff;
+
+      &-exclamation {
+        margin-top: -16px;
+      }
     }
   }
 
@@ -49,7 +31,7 @@
       display: block;
       width: 54px;
       height: 54px;
-      background: darken(@theme-shadow-color, 10%);
+      background: lighten(@theme-color, 10%);
       color: @theme-color;
       line-height: 54px;
       font-family: @header-font;
@@ -58,8 +40,45 @@
       text-align: center;
       box-shadow: 0 4px 0 @theme-shadow-color;
 
+      &::after {
+        content: '';
+        z-index: 2;
+        display: block;
+        position: absolute;
+        top: 54px;
+        left: ~"calc(50% - 10px)";
+        width: 0;
+        height: 0;
+        border-top: 0px solid lighten(@theme-color, 10%);
+        border-left: 10px solid transparent;
+        border-right: 10px solid transparent;
+        transition: border .2s;
+      }
+
+      &::before {
+        content: '';
+        z-index: 2;
+        display: block;
+        position: absolute;
+        top: 58px;
+        left: ~"calc(50% - 10px)";
+        width: 0;
+        height: 0;
+        border-top: 0px solid @theme-shadow-color;
+        border-left: 10px solid transparent;
+        border-right: 10px solid transparent;
+        transition: border .2s;
+      }
       &:hover {
         cursor: pointer;
+
+        &::after {
+          border-top: 8px solid lighten(@theme-color, 10%);
+        }
+
+        &::before {
+          border-top: 8px solid @theme-shadow-color;
+        }
       }
 
       &--question {
@@ -72,6 +91,34 @@
         position: absolute;
         top: 0;
         right: 0;
+      }
+    }
+
+    @media @mobile {
+      width: 34px;
+      height: 34px;
+      line-height: 34px;
+      font-size: 1.25 * @baseFontSize;
+      //margin: 0 2px;
+
+      &::after {
+        top: 34px;
+      }
+
+      &::before {
+        top: 38px;
+      }
+
+      &--question {
+        position: absolute;
+        top: 0;
+        left: 2px;
+      }
+
+      &--exclamation {
+        position: absolute;
+        top: 0;
+        left: 35px;
       }
     }
   }
@@ -96,8 +143,12 @@
       line-height: 54px;
       position: absolute;
       padding: 0 20px;
-      //width: 0;
-      //overflow: hidden;
+      &--nav {
+        //display: inline-block;
+        background: lighten(@theme-shadow-color, 5%);
+        opacity: 0;
+        transition: opacity 1s;
+      }
     }
 
     &::before {
@@ -153,7 +204,8 @@
       @media @tablet {
         display: block;
         background: #fff;
-        height: 0;
+        width: ~"calc(100% - 108px)";
+        padding: 20px 54px 0;
       }
     }
   }
