--- a/styles/blocks/logo/logo.less
+++ b/styles/blocks/logo/logo.less
@@ -1,17 +1,19 @@
 @import "../../variables.less";
 
 .logo {
-  height: 87px;
-  line-height: 87px;
-  width: 370px;
+  //height: 87px;
+  //line-height: 87px;
+  padding: 17px 0 14px;
+  width: 375px;
   display: block;
   text-align: center;
   text-transform: uppercase;
-  font-size: 2.35 * @baseFontSize;
-  font-family: @header-font;
+  font-size: 2.2 * @baseFontSize;
+  font-family: "Trend-Sans-One";
   font-weight: bold;
   text-decoration: none;
   color: @theme-color;
+  letter-spacing: 2px;
 
   @media @mobile {
     height: 53px;
@@ -24,16 +26,17 @@
     width: 3.7rem;
     height: 3.7rem;
     vertical-align: middle;
-    margin: 0 .2rem;
+    //margin: 0 .2rem;
     border-radius: 50%;
     background: @theme-color;
     fill: #fff;
+    margin: -3px -15px 0;
 
     @media @mobile {
       width: 2.125rem;
       height: 2.125rem;
       font-size: 1.5 * @baseFontSize;
-      margin: 0;
+      margin: -3px -10px 0;
       use {
         transform: scale(.6);
       }
