--- a/styles/blocks/article/article.less
+++ b/styles/blocks/article/article.less
@@ -12,6 +12,11 @@
     padding: 0 8.5%;
   }
 
+  @media @mobile {
+    padding: 0 3%;
+    margin-bottom: 90px;
+  }
+
   &__author {
     &::before {
       content: 'by ';
@@ -19,7 +24,7 @@
   }
 
   &__author-icon {
-    width: 1rem;
+    width: 1.2rem;
     height: 1.2rem;
     vertical-align: -25%;
     fill: @decor-color;
@@ -30,6 +35,11 @@
     font-family: @header-font;
     font-size: 1.3 * @baseFontSize;
     font-weight: bold;
+    
+    @media @mobile {
+      text-align: center;
+      background: #F4F5F7;
+    }
   }
 
   &__image {
@@ -72,6 +82,19 @@
       top: 0;
       right: 0;
     }
+
+    @media @mobile {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      box-sizing: border-box;
+      width: 100%;
+      padding: 0 3%;
+      top: auto;
+      right: auto;
+      left: 0;
+      bottom: -3rem;
+    }
   }
 
   &__text {
@@ -80,11 +103,11 @@
   }
 
   &__time {
-    margin-right: 5px;
+    margin-right: 12px;
   }
 
   &__time-icon {
-    width: 1rem;
+    width: 1.25rem;
     height: 1.2rem;
     vertical-align: -25%;
     fill: @decor-color;
