--- a/styles/styles.less
+++ b/styles/styles.less
@@ -8,9 +8,13 @@
   src: local("Josefin Sans"),
   url("fonts/JosefinSans-Light.ttf");
 }
+@font-face {
+  font-family: "Trend-Sans-One";
+  src: local("Trend-Sans-One"),
+  url("fonts/Trend-Sans-One.otf");
+}
 
 @import "variables.less";
-
 @import "blocks/body/body.less";
 @import "blocks/logo/logo.less";
 @import "blocks/header/header.less";
