--- a/styles/variables.less
+++ b/styles/variables.less
@@ -1,17 +1,23 @@
+/***** COLORS *****/
 @theme-color: #6B9AD0;
 @theme-shadow-color: #c6defa;
 @font-color: #69747c;
 @decor-color: #A6AAAD;
 @decor-dark: #6492B6;
+@color-facebook: #3b5998;
+@color-gplus: #dd4b39;
+@color-twitter: #00aced;
+@color-vk: #45668e;
+@color-yaru: #f00;
+
+/***** FONTS *****/
 @baseFontSize: 1rem;
 @main-font: "PT Sans Narrow";
 @header-font: "Josefin Sans";
 
+/***** ADAPTIVE *****/
 // Mode: Tablet
 @tablet: ~"screen and (max-width: 1000px)";
 
 // Mode: Mobile
 @mobile: ~"screen and (max-width: 650px)";
-
-// Mode: Mobile
-//@mobile: ~"screen and (max-width: 320)";
